src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_S64Overflow-StashIr.error
error: Value exceeds max limit of 's64'.
--> main.hs:7:16
  | 
7 |         return 9223372036854775808;
  |                ^^^^^^^^^^^^^^^^^^^
